--- a/src/css/root.css
+++ b/src/css/root.css
@@ -37,20 +37,37 @@ body{
     grid-template-rows: auto 1fr auto; 
 }
 
-.titulo{
-    font-family: var(--open-sans);
-    font-size: 35px;
-    font-weight: var(--semibold);
+main{
+    overflow-x: hidden;
 }
 
-.subtitulo{
+.titulo {
     font-family: var(--open-sans);
-    font-size: 22px;
     font-weight: var(--semibold);
+    font-size: clamp(28px, 1.82vw, 35px);
 }
 
-.texto{
+.subtitulo {
+    font-family: var(--open-sans);
+    font-weight: var(--semibold);
+    font-size: clamp(18px, 1.15vw, 22px);
+}
+
+.texto {
     font-family: var(--eb-garamond);
-    font-size: 16px;
     font-weight: var(--regular);
+    font-size: clamp(14px, 0.83vw, 16px);
+}
+
+html {
+    scroll-padding-top: 99px;
+    scroll-behavior: smooth;
+}
+
+.areas, .advogados, .escritorio, .footer{
+    padding: 90px 40px;
+}
+
+.header{
+    padding: 0 40px;
 }
