--- a/src/css/home-moba.css
+++ b/src/css/home-moba.css
@@ -5,6 +5,7 @@
 
     .advogados ul{
         flex-direction: column;
+        gap: 70px;
     }
 
     .areas .guia{
@@ -18,6 +19,10 @@
 
     footer .footer-sec{
         width: 100%!important;
+    }
+
+    .resposive-img{
+        height: 300px!important;
     }
 }
 
