--- a/src/css/root.css
+++ b/src/css/root.css
@@ -127,3 +127,18 @@ html {
         height: 300px;
     }
 }
+
+@keyframes fade-slide-in {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -30%); /* Move 10% para cima (de -50% para -60%) */
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%); /* Posição final centralizada */
+  }
+}
+
+.animate-fade-slide {
+  animation: fade-slide-in 1.5s ease-out 0s 1 normal forwards;
+}
