--- a/src/css/sobre.css
+++ b/src/css/sobre.css
@@ -8,16 +8,8 @@
 
 .sobre-page .line {
     width: 100%;
-    height: 3px;
-
-    background-image: linear-gradient(
-        to right, 
-        var(--cor-texto-escuro) 10px, 
-        transparent 0% 
-    );
-
-    background-size: 30px 3px; 
-    background-repeat: repeat-x;
-
+    height: 1px;
+    background-color: var(--cor-fundo-principal);
+    opacity: 0.2;
 }
 
